--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.1.0"
 description = "Engineering Paper Summarizer Library - Generate application-focused, hierarchical summaries of research papers"
 readme = "README.md"
 authors = [
-    {name = "Your Name", email = "your.email@example.com"}
+    {name = "Maureese Williams", email = "maureesewilliams@gmail.com"}
 ]
 license = {text = "MIT"}
 classifiers = [
@@ -40,8 +40,8 @@ dev = [
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/yourusername/engineering-paper-summarizer"
-"Bug Tracker" = "https://github.com/yourusername/engineering-paper-summarizer/issues"
+"Homepage" = "https://github.com/mmwilliams/engineering-paper-summarizer"
+"Bug Tracker" = "https://github.com/mmwilliams/engineering-paper-summarizer/issues"
 
 [project.scripts]
 engpapersumm = "engpapersumm.__main__:main"
